styles.css
@font-face {
  font-family: 'Peace Sans';
  src: url('fonts/peace_sans-webfont.woff') format('woff');
}

@font-face {
  font-family: 'Aaargh';
  src: url('fonts/Aaargh-webfont.woff') format('woff');
}

@font-face {
  font-family: 'RedHatDisplay Variable';
  src: url('fonts/RedHatDisplay-VariableFont_wght.ttf') format('ttf');
}

html {
  background-color: #f2f3f4;
}

body {
  display: grid;
  place-items: center;
  height: 100vh; /* adjust to your desired height */
}

#rps {
  background-color: white;
  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.3); /* shadow properties */
  padding: 40px;
  width: min-content;
}

#rps #header h3 {
  margin: 10px 0;
  font-family: 'Peace Sans', sans-serif;
  text-align: center;
}

#rps #header p {
  font-family: 'RedHatDisplay Variable', sans-serif;
  font-size: small;
  text-align: center;
}

#game {  
  display: grid; /* create grid container */
  grid-template-columns: 1fr;
}

#you {
  font-family: 'Peace Sans', sans-serif;
  font-size: 128px;
  line-height: 1;
}

#opp {
  font-family: 'Peace Sans', sans-serif;
  font-size: 42px;
  line-height: 1;
}

.column {
  display: flex;          /* set the parent container to flex */
  flex-direction: column; /* align children vertically */
  align-items: center;    /* center children horizontally */
}

.column p,span {
  font-family: 'RedHatDisplay Variable', sans-serif;
}

#place-wager {
  margin: 15px 0;
}

input[type="text"] {
  background-color: black;
  color: white;
  border: none; /* Remove default borders */
  padding: 10px; /* Add padding for visual spacing */
  border-radius: 0; /* Optional: Remove rounded corners */
  font-family: 'Peace Sans', sans-serif;
  text-align: center;
}

#offer-wager {
  background-color: black; /* base color, dark gray */
  color: white;  /* this is the text color */
  padding: 10px 20px;  /* this is the size of your button */
  border: none;
  border-radius: 4px;  /* this gives the button round edges */
  cursor: pointer;
  transition-duration: 0.4s;  /* this will make the hover effect an smooth transition */
  font-family: 'Peace Sans', sans-serif;
  font-size: smaller;
}

#offer-wager:hover { /* this will change the color of your button when the mouse over it */
  background-color: #BDBDBD; /* lighter shade of gray on hover */
}

#wager-input::placeholder {
  color: whitesmoke;
}

#wager-input[disabled]::placeholder { /* for most modern browsers */
  color: #999; /* change color to whatever you prefer */
}

input[type="text"]:disabled {
  background: #ddd;
  color: #C0C0C0;
  border: 1px solid #ccc;
}

#your-wager-in-ether {
  margin: 15px 0;
}

#opp-wager-in-ether {
  margin: 5px 0;
}

button {
  background-color: black; /* base color, dark gray */
  color: white;  /* this is the text color */
  padding: 10px 20px;  /* this is the size of your button */
  border: none;
  border-radius: 4px;  /* this gives the button round edges */
  cursor: pointer;
  transition-duration: 0.4s;  /* this will make the hover effect an smooth transition */
  font-family: 'Peace Sans', sans-serif;
  font-size: smaller;
}

button:hover { /* this will change the color of your button when the mouse over it */
  background-color: #BDBDBD; /* lighter shade of gray on hover */
}

button:disabled, #offer-wager:disabled {
  background-color: #808080; /* change the color of your button when it is disabled */
  color: #C0C0C0;  /* change the text color when it is disabled */
  cursor: not-allowed; /* indicates that the button is not available for interaction */
}

#opp-wagered {
  font-family: 'Peace Sans', sans-serif;
  font-size: x-large;
}

#wager-buttons {
  margin: 20px 0;
  padding: 0 65px;
  display: flex;
  justify-content: space-between;
  width: 80%;
}

#versus {
  width: 40px;
  height: 40px;
  background-color: #ffffff;
  border-radius: 50%;
  border: 4px solid #000000;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 20px 0;
}

#opp-status {
  margin: 20px 0;
}

#symbol-choice {
  margin: 20px 0 0 0;
  width: 100%;
}

#symbol-choice p {
  text-align: center;
  font-family: 'Peace Sans', sans-serif;
}

#symbol-choice #buttons {
  display: flex;
  justify-content: space-between;
}

#symbol-choice #buttons button {
  width: 60px;
  height: 60px;
  background-color: #ffffff;
  border-radius: 50%;
  border: 6px solid #000000;
  display: flex;
  align-items: center;
  justify-content: center;
  margin: 20px 0;
  transition-duration: 0.4s;  /* this will make the hover effect an smooth transition */
}

#symbol-choice #buttons button#rock:hover:not(:disabled) {
  background-color: red;
}

.xxx-large-peace-sans.red {
  color: red;
}

#symbol-choice #buttons button#paper:hover:not(:disabled) {
  background-color: purple;
}

.xxx-large-peace-sans.purple {
  color: purple;
}

#symbol-choice #buttons button#scissors:hover:not(:disabled) {
  background-color: seagreen;
}

.xxx-large-peace-sans.seagreen {
  color: seagreen;
}

#symbol-choice #buttons button:disabled {
  background-color: #ffffff;
  opacity: 0.5; /* This reduces the transparency of the button when it's disabled */
  cursor: not-allowed; /* This changes the mouse cursor when hovering over the button to indicate it's disabled */
}

#symbol-choice #buttons p {
  font-family: 'Peace Sans', sans-serif;
  color: black;
  font-size: x-large;
}

.xxx-large-peace-sans {
  font-family: 'Peace Sans', sans-serif;
  color: black;
  font-size: xxx-large;
}

#results #win-lose-draw {
  margin: 10px 0;
  font-family: 'Peace Sans', sans-serif;
  font-size: 50px;
  text-transform: uppercase;
  text-align: center;
}

#results #outcome {
  font-family: 'Peace Sans', sans-serif;
  font-size: 32px;
}

#results #outcome.draw {
  font-size: 16px;
}

#results p {
  text-align: center;
}

#your-wager, #opponent-wager,
#your-choice, #opp-choice {
  font-family: 'Peace Sans', sans-serif;
  font-size: 18px;
}

#your-wager-offer,
#your-wager-status,
#opp-wager-offer,
#opp-wager-status {
  margin: 0 0 5px 0;
}

#game-section {
  display: none;
  width: 100%;
}

@keyframes flash {
  0% {opacity: 1;}
  50% {opacity: 0.1;}
  100% {opacity: 1;}
}

.flashing {
  animation-name: flash;
  animation-duration: 1s;
  animation-iteration-count: infinite; /* to keep it flashing continuously */
}

#join-contract-status {
  margin: 0 0 20px 0;
}

